add check and uncheck functionality

--- a/public/index.html
+++ b/public/index.html
@@ -17,18 +17,18 @@
         <div class="list-box">
           <ul class="item-list">
             <li>
-              <input type="checkbox" />
+              <!-- <input type="checkbox" checked=""/>
               <label">Wash Hair</label>
             </li>
             <li>
-              <input type="checkbox" />
+              <input type="checkbox" checked=""/>
               <label >Buy Cheese</label>
             </li>
 
             <li>
-              <input type="checkbox" />
+              <input type="checkbox" checked=""/>
               <label>Write Essay</label>
-            </li>
+            </li> -->
 
           </ul>
           <div class="input-container">
