update Editing task feature and style

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,26 @@
     <link href="styles.css" rel="stylesheet" />
   </head>
   <body>
+    <div class="asteroid"></div>
+    <div class="asteroid"></div>
+    <div class="asteroid"></div>
+    <div class="asteroid"></div>
+    <div class="asteroid"></div>
+    <div class="asteroid"></div>
+    <div class="asteroid"></div>
+    <div class="asteroid"></div>
+    <div class="asteroid"></div>
+    <div class="asteroid"></div>
+    <div class="asteroid"></div>
+    <div class="asteroid"></div>
+    <div class="asteroid"></div>
+    <div class="asteroid"></div>
+    <div class="asteroid"></div>
+    <div class="asteroid"></div>
+    <div class="asteroid"></div>
+    <div class="asteroid"></div>
+    <div class="asteroid"></div>
+    <div class="asteroid"></div>
     <div class="container">
       <div class="sub-box">
         <div class="header-box">
@@ -18,18 +38,20 @@
           <ul class="item-list">
             <li>
               <input type="checkbox" />
-              <label">Wash Hair</label>
+              <label>Wash Hair</label>
+              <span class="edit-btn">✏️</span>
             </li>
             <li>
               <input type="checkbox" />
-              <label >Buy Cheese</label>
+              <label>Buy Cheese</label>
+              <span class="edit-btn">✏️</span>
             </li>
 
             <li>
               <input type="checkbox" />
               <label>Write Essay</label>
+              <span class="edit-btn">✏️</span>
             </li>
-
           </ul>
           <div class="input-container">
             <form id="itemForm" action="/items" method="POST">
@@ -47,6 +69,9 @@
         </div>
       </div>
     </div>
+    <footer>  
+      <p>&copy; 2024 Sujay Kumar. All rights reserved.</p>
+  </footer>
   </body>
   <script src="index.js"></script>
 </html>
