flag all the feature done

--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,9 @@
 
         <!-- Box for the task list -->
         <div class="list-box">
+          <div class="delete-btn">
+            <button id="delete-btn" required>🗑️</button>
+          </div>
           <ul class="item-list">
             <li>
               <input type="checkbox" />
@@ -69,9 +72,9 @@
         </div>
       </div>
     </div>
-    <footer>  
+    <footer>
       <p>&copy; 2024 Sujay Kumar. All rights reserved.</p>
-  </footer>
+    </footer>
   </body>
   <script src="index.js"></script>
 </html>
